@@ -1,3 +1,7 @@
+2008-01-08  Kevin Ryde  <user42@zip.com.au>
+
+	* compilation.txt (perl): Add a "during global destruction" sample.
+
 2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* PROBLEMS:
